--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,7 +29,7 @@
                     "ignoreFailures": true
                 }
             ],
-            "miDebuggerPath": "/usr/bin/gdb",
+            "miDebuggerPath": "/home/book/gdb",
             "preLaunchTask": "Build"
         }
     ]
